# peroxide

./: .gitignore  Cargo.toml  README.md  init.todo  peroxide.excalidraw
examples/: button.rs  container.rs  custom.rs  minimal.rs
src/: lib.rs
src/event/: event.rs  mod.rs  pointer_event.rs
src/platform/: mod.rs  platform.rs
src/platform/macos/: cargo.toml  widgets.rs
src/platform/windows/: class_name.rs  mod.rs  render_object_windows.rs  widgets.rs  window_class.rs
src/rendering/: mod.rs  render_object.rs
src/rendering/canvas/: canvas.rs
src/widget/: mod.rs  traits.rs  widget.rs  widget_tree.rs
src/widget/macros/: Cargo.toml
src/widget/macros/src/: lib.rs
src/widget/style/: border.rs  decoration.rs  mod.rs
src/widget/widgets/: base_widget.rs  button.rs  container.rs  mod.rs  str.rs  widget_catelog.rs
src/window/: app.rs  mod.rs  state.rs  window.rs
tests/: main.rs
