[package]
name = "peroxide"
version = "0.1.0"
edition = "2024"

publish = false

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
pollster = "0.4.0"
quote = "1.0.40"
syn = "2.0.100"
wgpu = {version="25.0.0", features=["metal"]}
winit = {version="0.30.9", features = ["rwh_05"] }
macros = { path = "./src/widget/macros" }
wayland-client = "0.31.8"
cacao = "0.3.2"

[target.'cfg(windows)'.dependencies]
windows = {version = "0.61.1", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging"]}
