[package]
name = "peroxide"
version = "0.1.0"
edition = "2024"

publish = false

[dependencies]
env_logger = "0.11.8"
log = "0.4.29"
pollster = "0.4.0"
quote = "1.0.42"
syn = "2.0.111"
wgpu = "27.0.1"
winit = {version="0.30.12", features = ["rwh_05"] }
macros = { path = "./src/widget/macros" }

[target.'cfg(windows)'.dependencies]
windows = {version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging"]}

[target.'cfg(unix)'.dependencies]
wayland-client = "0.31.8"